<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_new_Address"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <include layout="@layout/custom_header" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="visible"
            app:cardCornerRadius="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_fullnmae"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fullname_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/text_color_light"
                        android:hint="@string/full_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/address_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/text_color_light"
                        android:hint="@string/street_no_address"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mobile_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/text_color_light"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/landmark_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/text_color_light"
                        android:hint="@string/landmark"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/is_permanent_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/check_if_add_perm"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <AutoCompleteTextView
                            android:id="@+id/state_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:backgroundTint="@color/text_color_light"
                            android:hint="@string/state"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/text_color"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_city"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <AutoCompleteTextView
                            android:id="@+id/city_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:backgroundTint="@color/text_color_light"
                            android:hint="@string/city"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/text_color"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_pincode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <EditText
                            android:id="@+id/pincode_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:backgroundTint="@color/text_color_light"
                            android:hint="@string/pin_code"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="6"
                            android:textColor="@color/text_color"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_addresstype"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <EditText
                            android:id="@+id/et_addressType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="@color/text_color_light"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/address_type"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/text_color"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/btn_add_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_margin="2dp"
                    android:background="@drawable/rect_btn_border_blue"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="5dp"
                    android:text="@string/add_and_deliver"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_savedaddr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            app:cardCornerRadius="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Address"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/light_text" />

                <ListView
                    android:id="@+id/lv_saved_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/light_text"
                    android:dividerHeight="1dp"
                    android:scrollbars="none"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/noAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="No address found!"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:visibility="gone" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/add_new_Address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="Add New Address"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>