<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_logo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/choose_language"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <View
        android:id="@+id/view"
        android:layout_width="68dp"
        android:layout_height="3dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rect_hollow"
        android:gravity="center"
        android:text="@string/english"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hindi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <TextView
        android:id="@+id/hindi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rect_hollow"
        android:gravity="center"
        android:text="@string/hindi"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/english" />

    <View
        android:id="@+id/orange_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/blue_view"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/orange_view"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
