<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        android:padding="2dp">


        <TextView
            android:id="@+id/fullname_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:hint="@string/full_name"
            android:padding="2dp"
            android:textAppearance="@style/TextField_Bold"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/addressType_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/size_border"
            android:hint="TYPE"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:paddingEnd="4dp"
            android:paddingBottom="2dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullname_bill" />

        <TextView
            android:id="@+id/address_bill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="Address"
            android:padding="2dp"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressType_bill" />

        <TextView
            android:id="@+id/landmark_bill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/landmark"
            android:padding="2dp"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_bill" />


        <TextView
            android:id="@+id/pinCode_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/pin_code"
            android:padding="2dp"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/landmark_bill" />


        <Button
            android:id="@+id/btn_edit_address"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="@color/transparent"
            android:drawableStart="@drawable/edit_address"
            android:gravity="center"
            android:text="Edit"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinCode_bill" />

        <Button
            android:id="@+id/btn_remove_address"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:drawableStart="@drawable/delete_address"
            android:gravity="center"
            android:text="Delete"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/btn_edit_address"
            app:layout_constraintTop_toBottomOf="@+id/pinCode_bill" />


        <Button
            android:id="@+id/btn_selected"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/size_border"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/deliver_here"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/addressType_bill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fullname_bill" />


    </android.support.constraint.ConstraintLayout>

</RelativeLayout>